--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "webpack-dev-server --config configs/webpack/webpack.config.dev.babel.js",
-    "build": "webpack --progress --display-modules --config configs/webpack/webpack.config.prod.babel.js",
+    "start": "cross-env TS_NODE_PROJECT=configs/tsconfig.webpack.json webpack-dev-server --config configs/webpack/webpack.config.dev.ts",
+    "build": "cross-env TS_NODE_PROJECT=configs/tsconfig.webpack.json webpack --progress --display-modules --config configs/webpack/webpack.config.prod.ts",
     "test": "tsc && jest",
     "clean": "rimraf dist",
     "fix:ts": "npm run tslint:fix && npm run prettier:fix",
@@ -21,55 +21,62 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.1.2",
-    "@babel/preset-env": "^7.1.0",
+    "@babel/core": "^7.1.5",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/preset-env": "^7.1.5",
     "@babel/register": "^7.0.0",
-    "@types/jest": "^23.3.2",
+    "@types/clean-webpack-plugin": "^0.1.2",
+    "@types/html-webpack-plugin": "^3.2.0",
+    "@types/jest": "^23.3.9",
     "@types/memoize-one": "^3.1.1",
-    "@types/node": "^10.11.3",
-    "@types/react": "^16.4.14",
-    "@types/react-dom": "^16.0.8",
+    "@types/mini-css-extract-plugin": "^0.2.0",
+    "@types/node": "^10.12.2",
+    "@types/react": "^16.4.18",
+    "@types/react-dom": "^16.0.9",
     "@types/shortid": "0.0.29",
+    "@types/uglifyjs-webpack-plugin": "^1.1.0",
+    "@types/webpack-bundle-analyzer": "^2.13.0",
+    "@types/webpack-merge": "^4.1.3",
     "autoprefixer": "^9.3.1",
     "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.0.4",
     "clean-webpack-plugin": "^0.1.19",
-    "copy-webpack-plugin": "^4.5.2",
+    "copy-webpack-plugin": "^4.6.0",
+    "cross-env": "^5.2.0",
     "css-loader": "^1.0.1",
-    "gdmn-orm": "git+https://github.com/gsbelarus/gdmn-orm.git",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^23.6.0",
-    "mini-css-extract-plugin": "^0.4.3",
-    "prettier": "^1.14.3",
+    "mini-css-extract-plugin": "^0.4.4",
+    "prettier": "^1.15.1",
     "react-dev-utils": "^6.1.1",
-    "react-hot-loader": "^4.3.11",
+    "react-hot-loader": "^4.3.12",
     "style-loader": "^0.23.1",
     "ts-jest": "^23.10.4",
     "ts-loader": "^5.3.0",
     "ts-node": "^7.0.1",
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.15.0",
-    "tslint-consistent-codestyle": "^1.13.3",
+    "tslint-consistent-codestyle": "^1.14.1",
     "tslint-react": "^3.6.0",
     "typescript": "^3.1.6",
-    "webpack": "^4.20.2",
+    "webpack": "^4.25.1",
     "webpack-bundle-analyzer": "^3.0.3",
     "webpack-cleanup-plugin": "^0.5.1",
     "webpack-cli": "^3.1.2",
     "webpack-dashboard": "^2.0.0",
-    "webpack-dev-server": "^3.1.9",
+    "webpack-dev-server": "^3.1.10",
     "webpack-merge": "^4.1.4"
   },
   "dependencies": {
-    "@trendmicro/react-checkbox": "^3.4.1",
+    "@types/webpack": "^4.4.17",
+    "@types/webpack-dev-server": "^3.1.1",
     "antd": "^3.10.4",
     "axios": "^0.18.0",
-    "memoize-one": "^4.0.2",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
-    "react-draggable": "^3.0.5",
-    "react-infinite-tree": "^1.0.0-alpha.6",
-    "shortid": "^2.2.13",
+    "error-overlay-webpack-plugin": "^0.1.5",
+    "memoize-one": "^4.0.3",
+    "react": "^16.6.1",
+    "react-dom": "^16.6.1",
+    "shortid": "^2.2.14",
     "styled-components": "^4.0.3"
   }
 }
