--- a/package.json
+++ b/package.json
@@ -33,23 +33,37 @@
     "@types/node": "^10.12.2",
     "@types/react": "^16.4.18",
     "@types/react-dom": "^16.0.9",
+    "@types/react-redux": "^6.0.9",
+    "@types/react-router-dom": "^4.3.1",
+    "@types/redux": "^3.6.0",
+    "@types/redux-logger": "^3.0.6",
     "@types/shortid": "0.0.29",
     "@types/uglifyjs-webpack-plugin": "^1.1.0",
+    "@types/webpack": "^4.4.17",
     "@types/webpack-bundle-analyzer": "^2.13.0",
+    "@types/webpack-dev-server": "^3.1.1",
     "@types/webpack-merge": "^4.1.3",
     "autoprefixer": "^9.3.1",
     "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.0.4",
     "clean-webpack-plugin": "^0.1.19",
     "copy-webpack-plugin": "^4.6.0",
+    "core-decorators": "^0.20.0",
     "cross-env": "^5.2.0",
     "css-loader": "^1.0.1",
+    "cuid": "^2.1.4",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^23.6.0",
     "mini-css-extract-plugin": "^0.4.4",
+    "node-sass": "^4.10.0",
+    "postcss-loader": "^3.0.0",
     "prettier": "^1.15.1",
     "react-dev-utils": "^6.1.1",
     "react-hot-loader": "^4.3.12",
+    "redux-devtools-extension": "^2.13.5",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
+    "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "ts-jest": "^23.10.4",
     "ts-loader": "^5.3.0",
@@ -58,6 +72,7 @@
     "tslint-config-prettier": "^1.15.0",
     "tslint-consistent-codestyle": "^1.14.1",
     "tslint-react": "^3.6.0",
+    "typesafe-actions": "^2.0.4",
     "typescript": "^3.1.6",
     "webpack": "^4.25.1",
     "webpack-bundle-analyzer": "^3.0.3",
@@ -68,14 +83,15 @@
     "webpack-merge": "^4.1.4"
   },
   "dependencies": {
-    "@types/webpack": "^4.4.17",
-    "@types/webpack-dev-server": "^3.1.1",
     "antd": "^3.10.4",
     "axios": "^0.18.0",
     "error-overlay-webpack-plugin": "^0.1.5",
     "memoize-one": "^4.0.3",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
+    "react-redux": "^5.1.0",
+    "react-router-dom": "^4.3.1",
+    "redux": "^4.0.1",
     "shortid": "^2.2.14",
     "styled-components": "^4.0.3"
   }
