--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,11 @@
     "paths": {
       "@src/*": ["src/*"],
       "@components/*": ["src/components/*"],
-      "@configs": ["configs/*"]
+      "@configs": ["configs/*"],
+      "@common/*": ["src/common/*"],
+      "@containers/*": ["src/containers/*"],
+      "@actions/*": ["src/actions/*"],
+      "@reducers/*": ["src/reducers/*"]
     },
     "rootDir": ".",
     "sourceMap": true,
