--- a/.gitignore
+++ b/.gitignore
@@ -1,52 +1,8 @@
-# Build
-/build
-#/dist
-packages/*/dist*
-/.awcache
-
-# server config
-# /configs/config.json
-
-# mock server
-/mockServer
-
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Dependency directories
-node_modules
-
-# Optional npm cache directory
-.npm
-
-# Optional REPL history
-.node_repl_history
-
-# Sublime
-*.sublime-project
-*.sublime-workspace
-
-# IntelliJ IDE
-.idea
-
-# Visual Studio Code
 .vscode
-.history
-
-Thumbs.db
-Desktop.ini
-.DS_Store*
-ehthumbs.db
-
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-coverage
-
-mock-data.json
+.idea
+.DS_STORE
+node_modules
+.module-cache
+*.log*
+build
+dist
