--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,10 @@
 {
-  "printWidth": 120,
-  "singleQuote": true,
+  "arrowParens": "always",
   "semi": true,
-  "bracketSpacing": true
+  "useTabs": false,
+  "tabWidth": 2,
+  "bracketSpacing": true,
+  "singleQuote": true,
+  "jsxBracketSameLine": false,
+  "printWidth": 100
 }
