--- a/package.json
+++ b/package.json
@@ -1,98 +1,75 @@
 {
-  "name": "lib1-stas-2018",
+  "name": "web-scrape",
   "version": "1.0.0",
-  "description": "",
+  "private": true,
+  "description": "web scrape",
+  "homepage": "http://guthub.com",
+  "main": "index.js",
   "scripts": {
-    "start": "cross-env TS_NODE_PROJECT=configs/tsconfig.webpack.json webpack-dev-server --config configs/webpack/webpack.config.dev.ts",
-    "build": "cross-env TS_NODE_PROJECT=configs/tsconfig.webpack.json webpack --progress --display-modules --config configs/webpack/webpack.config.prod.ts",
-    "test": "tsc && jest",
-    "clean": "rimraf dist",
-    "fix:ts": "npm run tslint:fix && npm run prettier:fix",
-    "prettier:cli": "prettier \"**/*.@(ts|tsx|js|jsx)\"",
-    "prettier:fix": "npm run prettier:cli -- --write",
-    "prettier:lint": "npm run prettier:cli -- -l",
-    "reinstall": "bash -c 'rm -rf  package-lock.json node_modules' && npm i",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack-dev-server --config configs/webpack.config --mode development --hot --progress --color --port 3000 --open",
+    "build": "webpack -p --progress --colors",
+    "prettier": "prettier --write \"src/**/*.{ts,tsx,css}\"",
     "tslint:check": "tslint-config-prettier-check ./tslint.json",
     "tslint:cli": "tslint --project tsconfig.json",
-    "tslint:fix": "npm run tslint:cli -- --fix",
-    "tslint:lint": "npm run tslint:cli"
+    "tslint:fix": "yarn run tslint:cli --fix",
+    "tslint:lint": "yarn run tslint:cli"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.1.5",
-    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
-    "@babel/preset-env": "^7.1.5",
-    "@babel/register": "^7.0.0",
-    "@types/clean-webpack-plugin": "^0.1.2",
-    "@types/html-webpack-plugin": "^3.2.0",
-    "@types/jest": "^23.3.9",
-    "@types/memoize-one": "^3.1.1",
-    "@types/mini-css-extract-plugin": "^0.2.0",
-    "@types/node": "^10.12.2",
-    "@types/react": "^16.4.18",
-    "@types/react-dom": "^16.0.9",
-    "@types/react-redux": "^6.0.9",
-    "@types/react-router-dom": "^4.3.1",
-    "@types/redux": "^3.6.0",
-    "@types/redux-logger": "^3.0.6",
-    "@types/shortid": "0.0.29",
-    "@types/uglifyjs-webpack-plugin": "^1.1.0",
-    "@types/webpack": "^4.4.17",
-    "@types/webpack-bundle-analyzer": "^2.13.0",
-    "@types/webpack-dev-server": "^3.1.1",
-    "@types/webpack-merge": "^4.1.3",
-    "autoprefixer": "^9.3.1",
-    "awesome-typescript-loader": "^5.2.1",
+    "@babel/core": "^7.1.2",
+    "@types/classnames": "2.2.6",
+    "@types/history": "4.7.1",
+    "@types/node": "10.11.7",
+    "@types/react": "16.4.16",
+    "@types/react-dom": "16.0.9",
+    "@types/react-redux": "6.0.9",
+    "@types/react-router": "4.0.32",
+    "@types/redux-actions": "2.3.1",
+    "@types/redux-thunk": "^2.1.0",
+    "@types/webpack": "4.4.16",
+    "@types/webpack-env": "1.13.6",
     "babel-loader": "^8.0.4",
-    "clean-webpack-plugin": "^0.1.19",
-    "copy-webpack-plugin": "^4.6.0",
-    "core-decorators": "^0.20.0",
-    "cross-env": "^5.2.0",
-    "css-loader": "^1.0.1",
-    "cuid": "^2.1.4",
-    "html-webpack-plugin": "^3.2.0",
-    "jest": "^23.6.0",
+    "css-loader": "^1.0.0",
+    "file-loader": "^2.0.0",
+    "gh-pages": "^2.0.1",
+    "html-loader": "^1.0.0-alpha.0",
+    "html-webpack-plugin": "^4.0.0-alpha",
     "mini-css-extract-plugin": "^0.4.4",
-    "node-sass": "^4.10.0",
+    "postcss": "^7.0.5",
+    "postcss-browser-reporter": "^0.5.0",
+    "postcss-import": "^12.0.0",
     "postcss-loader": "^3.0.0",
-    "prettier": "^1.15.1",
-    "react-dev-utils": "^6.1.1",
-    "react-hot-loader": "^4.3.12",
+    "postcss-preset-env": "^6.1.1",
+    "postcss-reporter": "^6.0.0",
+    "postcss-url": "^8.0.0",
+    "prettier": "^1.14.3",
+    "react-hot-loader": "^4.3.11",
     "redux-devtools-extension": "^2.13.5",
-    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
-    "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
-    "ts-jest": "^23.10.4",
-    "ts-loader": "^5.3.0",
-    "ts-node": "^7.0.1",
+    "ts-loader": "^5.2.1",
     "tslint": "^5.11.0",
-    "tslint-config-prettier": "^1.15.0",
+    "tslint-config-prettier": "^1.17.0",
     "tslint-consistent-codestyle": "^1.14.1",
     "tslint-react": "^3.6.0",
     "typesafe-actions": "^2.0.4",
-    "typescript": "^3.1.6",
-    "webpack": "^4.25.1",
-    "webpack-bundle-analyzer": "^3.0.3",
+    "typescript": "^3.1.3",
+    "url-loader": "^1.1.2",
+    "webpack": "^4.20.2",
     "webpack-cleanup-plugin": "^0.5.1",
     "webpack-cli": "^3.1.2",
-    "webpack-dashboard": "^2.0.0",
-    "webpack-dev-server": "^3.1.10",
-    "webpack-merge": "^4.1.4"
+    "webpack-dev-server": "^3.1.9"
   },
   "dependencies": {
-    "antd": "^3.10.4",
-    "axios": "^0.18.0",
-    "error-overlay-webpack-plugin": "^0.1.5",
-    "memoize-one": "^4.0.3",
-    "react": "^16.6.1",
-    "react-dom": "^16.6.1",
-    "react-redux": "^5.1.0",
-    "react-router-dom": "^4.3.1",
+    "classnames": "^2.2.6",
+    "react": "^16.5.2",
+    "react-dom": "^16.5.2",
+    "react-redux": "^5.0.7",
+    "react-router": "^4.3.1",
     "redux": "^4.0.1",
-    "shortid": "^2.2.14",
-    "styled-components": "^4.0.3"
+    "redux-actions": "^2.6.1"
   }
 }
