--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/react-redux": "6.0.9",
     "@types/react-router": "4.0.32",
     "@types/redux-actions": "2.3.1",
+    "@types/redux-logger": "^3.0.6",
     "@types/redux-thunk": "^2.1.0",
     "@types/webpack": "4.4.16",
     "@types/webpack-env": "1.13.6",
@@ -48,6 +49,7 @@
     "prettier": "^1.14.3",
     "react-hot-loader": "^4.3.11",
     "redux-devtools-extension": "^2.13.5",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "style-loader": "^0.23.1",
     "ts-loader": "^5.2.1",
