--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/webpack": "4.4.16",
     "@types/webpack-env": "1.13.6",
     "babel-loader": "^8.0.4",
+    "bind-decorator": "^1.0.11",
     "css-loader": "^1.0.0",
     "file-loader": "^2.0.0",
     "gh-pages": "^2.0.1",
@@ -66,6 +67,7 @@
     "webpack-dev-server": "^3.1.9"
   },
   "dependencies": {
+    "antd": "^3.11.2",
     "classnames": "^2.2.6",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
