--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "html-loader": "^1.0.0-alpha.0",
     "html-webpack-plugin": "^4.0.0-alpha",
     "mini-css-extract-plugin": "^0.4.4",
+    "node-sass": "^4.11.0",
     "postcss": "^7.0.5",
     "postcss-browser-reporter": "^0.5.0",
     "postcss-import": "^12.0.0",
@@ -52,6 +53,7 @@
     "redux-devtools-extension": "^2.13.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "ts-loader": "^5.2.1",
     "tslint": "^5.11.0",
@@ -67,8 +69,10 @@
     "webpack-dev-server": "^3.1.9"
   },
   "dependencies": {
+    "@types/cuid": "^1.3.0",
     "antd": "^3.11.2",
     "classnames": "^2.2.6",
+    "cuid": "^2.1.4",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-redux": "^5.0.7",
