--- a/package.json
+++ b/package.json
@@ -70,9 +70,11 @@
   },
   "dependencies": {
     "@types/cuid": "^1.3.0",
+    "@types/moment": "^2.13.0",
     "antd": "^3.11.2",
     "classnames": "^2.2.6",
     "cuid": "^2.1.4",
+    "moment": "^2.23.0",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-redux": "^5.0.7",
