--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
   "dependencies": {
     "@types/cuid": "^1.3.0",
     "@types/moment": "^2.13.0",
+    "@types/react-router-dom": "^4.3.1",
     "antd": "^3.11.2",
     "classnames": "^2.2.6",
     "cuid": "^2.1.4",
@@ -79,6 +80,7 @@
     "react-dom": "^16.5.2",
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "redux": "^4.0.1",
     "redux-actions": "^2.6.1"
   }
